[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
clap = { version = "4.0", features = ["derive"] } 
reqwest = { version = "0.11.22" }
tokio = { version = "1.12.0", features = ["full"] } 
toml = "0.5"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"


